# RcppArmadillo

./: .Rbuildignore  .Rinstignore  .codecov.yml  .covrignore  .gitattributes  .gitignore  .travis.yml  ChangeLog  DESCRIPTION  NAMESPACE  NEWS  README  README.md  cleanup  configure  configure.ac  configure.in  rcpparmadillo.Rproj
.aspell/: RcppArmadillo.rds  defaults.R
.github/workflows/: ci.yaml
R/: RcppArmadillo.package.skeleton.R  RcppExports.R  SHLIB.R  SciPy2R.R  armadillo_version.R  fastLm.R  flags.R  init.R  inline.R  inline.R.in  py2r.R  unit.test.R  zzz.R
debian/: changelog  control  copyright  r-cran-rcpparmadillo.lintian-overrides  rules  watch
inst/: CITATION  ChangeLog  NEWS  NEWS.Rd
inst/announce/: ANNOUNCE-0.2.0.txt
inst/doc/: Makefile  RcppArmadillo-intro.Rnw  RcppArmadillo-unitTests.Rnw  RcppArmadillo.bib
inst/doc/unitTests/: RcppArmadillo-unitTests.R
inst/examples/: fastLm.r  varSimulation.r
inst/examples/kalman/: Kalman.cpp  KalmanCpp.R  benchmark.R  firstExample.R
inst/include/: README  RcppArmadillo.h  RcppArmadilloAs.h  RcppArmadilloConfig.h  RcppArmadilloConfigGenerated.h.in  RcppArmadilloDefines.h  RcppArmadilloDefines.h.in  RcppArmadilloForward.h  RcppArmadilloLapack.h.in  RcppArmadilloSugar.h  RcppArmadilloWrap.h  armadillo
inst/include/RcppArmadillo/: Alt_R_RNG.h  Col_meat.h  Col_proto.h  Light  Lighter  Lightest  Mat_meat.h  Mat_proto.h  RcppArmadillo  Row_meat.h  Row_proto.h
inst/include/RcppArmadillo/config/: RcppArmadilloConfig.h  RcppArmadilloConfigGenerated.h  RcppArmadilloConfigGenerated.h.in
inst/include/RcppArmadillo/interface/: RcppArmadilloAs.h  RcppArmadilloForward.h  RcppArmadilloWrap.h
inst/include/RcppArmadillo/rng/: Alt_R_RNG.h
inst/include/RcppArmadillo/version/: arma.h
inst/include/RcppArmadilloExtensions/: fixprob.h  rmultinom.h  sample.h  spmat.h
inst/include/RcppArmadillo_impl/: RcppArmadilloConfig.h  RcppArmadilloForward.h
inst/include/armadillo_bits/: Base.hpp  BaseCube.hpp  BaseCube_bones.hpp  BaseCube_meat.hpp  Base_bones.hpp  Base_meat.hpp  Col_bones.hpp  Col_meat.hpp  Col_proto.hpp  CubeToMatOp_bones.hpp  CubeToMatOp_meat.hpp  Cube_bones.hpp  Cube_meat.hpp  Cube_proto.hpp  GenCube_bones.hpp  GenCube_meat.hpp  Gen_bones.hpp  Gen_meat.hpp  GlueCube_bones.hpp  GlueCube_meat.hpp  GlueCube_proto.hpp  Glue_bones.hpp  Glue_meat.hpp  Glue_proto.hpp  MapMat_bones.hpp  MapMat_meat.hpp  Mat_bones.hpp  Mat_meat.hpp  Mat_proto.hpp  OpCube_bones.hpp  OpCube_meat.hpp  OpCube_proto.hpp  Op_bones.hpp  Op_meat.hpp  Op_proto.hpp  Proxy.hpp  ProxyCube.hpp  Row_bones.hpp  Row_meat.hpp  Row_proto.hpp  (+725 more)
inst/include/current/: armadillo
inst/include/current/armadillo_bits/: BaseCube_bones.hpp  BaseCube_meat.hpp  Base_bones.hpp  Base_meat.hpp  Col_bones.hpp  Col_meat.hpp  Cube_bones.hpp  Cube_meat.hpp  GenCube_bones.hpp  GenCube_meat.hpp  Gen_bones.hpp  GlueCube_meat.hpp  Glue_bones.hpp  Glue_meat.hpp  MapMat_meat.hpp  Mat_bones.hpp  Mat_meat.hpp  OpCube_bones.hpp  OpCube_meat.hpp  Op_bones.hpp  Op_meat.hpp  ProxyCube.hpp  Row_bones.hpp  Row_meat.hpp  SizeCube_bones.hpp  SizeCube_meat.hpp  SizeMat_bones.hpp  SpBase_bones.hpp  SpCol_bones.hpp  SpMat_bones.hpp  SpMat_meat.hpp  SpOp_bones.hpp  SpRow_bones.hpp  SpRow_meat.hpp  SpSubview_bones.hpp  SpSubview_col_list_bones.hpp  SpSubview_meat.hpp  SpToDGlue_bones.hpp  SpToDOp_bones.hpp  SpToDOp_meat.hpp  (+365 more)
inst/include/legacy/: armadillo
inst/include/legacy/armadillo_bits/: BaseCube_meat.hpp  Base_meat.hpp  Col_bones.hpp  Col_meat.hpp  CubeToMatOp_bones.hpp  CubeToMatOp_meat.hpp  Cube_bones.hpp  Cube_meat.hpp  GenCube_bones.hpp  GenCube_meat.hpp  Gen_bones.hpp  Gen_meat.hpp  GlueCube_meat.hpp  Glue_bones.hpp  Glue_meat.hpp  MapMat_bones.hpp  MapMat_meat.hpp  Mat_meat.hpp  OpCube_bones.hpp  Op_meat.hpp  Proxy.hpp  ProxyCube.hpp  Row_bones.hpp  Row_meat.hpp  SizeCube_meat.hpp  SizeMat_meat.hpp  SpBase_bones.hpp  SpCol_bones.hpp  SpCol_meat.hpp  SpMat_bones.hpp  SpMat_iterators_meat.hpp  SpOp_bones.hpp  SpOp_meat.hpp  SpProxy.hpp  SpRow_meat.hpp  SpSubview_bones.hpp  SpSubview_meat.hpp  SpToDGlue_bones.hpp  SpToDGlue_meat.hpp  SpToDOp_meat.hpp  (+327 more)
inst/skeleton/: Makevars  Makevars.win  rcpparma_hello_world.R  rcpparma_hello_world.cpp  rcpparma_hello_world.h
inst/tinytest/: test_Rlapack.R  test_complex.R  test_cube.R  test_fastLm.R  test_fields.R  test_fields_new.R  test_misc.R  test_rcpparmadillo.R  test_rmultinom.R  test_rng.R  test_scipy2r.R  test_sparse.R  test_sparseConversion.R
inst/tinytest/cpp/: armadillo.cpp  fields.cpp  fields_new.cpp
inst/unitTests/: runTests.R  runit.RcppArmadillo.R  runit.Rlapack.R  runit.cube.R  runit.fastLm.R  runit.rmultinom.R  runit.sample.R  runit.scipy2r.R  runit.sparse.R  runit.sparseConversion.R
inst/unitTests/cpp/: Rlapack.cpp  armadillo.cpp  complex.cpp  cube.cpp  rmultinom.cpp  sample.cpp  sparse.cpp
local/: RcppArmadillo-unitTests.Rnw  armafield.cpp  issue474_ebsc_rank.cpp  issue474_ebsc_rank_full.cpp  issue474_ebsc_rank_main.cpp  issue474_ebsc_rank_main_min_arma.cpp  issue474_ebsc_rank_main_min_arma_std.cpp  issue474_ebsc_rank_main_no_arma.cpp  rcpparma375.cpp
man/: RcppArmadillo-package.Rd  RcppArmadillo.package.skeleton.Rd  armadillo_get_number_of_omp_threads.Rd  armadillo_set_seed.Rd  armadillo_set_seed_random.Rd  armadillo_throttle_cores.Rd  armadillo_version.Rd  fastLm.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppArmadillo.cpp  RcppArmadillo.h  RcppExports.cpp  fastLm.cpp  init.c  test_any_as_vec.cpp  test_armadillo.cpp  test_colrow_as_vec.cpp  test_complex.cpp  test_cube.cpp
tests/: doRUnit.R  tinytest.R
vignettes/: .gitignore  Makefile  RcppArmadillo-intro.Rnw  RcppArmadillo-intro.pdf.asis  RcppArmadillo-sparseMatrix.Rmd  RcppArmadillo-sparseMatrix.Rnw  RcppArmadillo-sparseMatrix.pdf.asis  RcppArmadillo-unitTests.Rnw  RcppArmadillo.bib
vignettes/rmd/: Makefile  RcppArmadillo-intro.Rnw  RcppArmadillo-sparseMatrix.Rmd  RcppArmadillo.bib  elsarticle-harv.bst
vignettes/unitTests/: RcppArmadillo-unitTests.R
vignettes/unitTests-results/: RcppArmadillo-unitTests.html  RcppArmadillo-unitTests.txt
